Archive2/49/cca25bf88c95fc/output
main.cpp: In function 'int main()':
main.cpp:97:17: error: unable to find numeric literal operator 'operator""_10_baseChange'
    std::cout << 23_10_baseChange << std::endl;
                 ^
main.cpp:97:17: note: use -std=gnu++11 or -fext-numeric-literals to enable more built-in suffixes
